chore(laravel): fix pageCount type
